fix(components): DataList UI updates (#1612)
* update loading state spacing

* ensure tags don't wrap its text

* ensure items have a min height

* fix focus being clipped with a bit of CSS trickery

* offset bulk actions

* remove extra margin on the actions

--- a/packages/components/src/DataList/components/DataListTags/DataListTags.css
+++ b/packages/components/src/DataList/components/DataListTags/DataListTags.css
@@ -4,6 +4,7 @@
   z-index: var(--elevation-default);
   overflow: hidden;
   gap: var(--space-small);
+  white-space: nowrap;
 }
 
 .tagCount {
